ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeinvaders2
  namespace: kubeinvaders
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ccdaniele-testing
spec:
  ingressClassName: istio
  rules:
  - host: www.my192835test.com
    http:
      paths:
      - backend:
          service:
            name: kubeinvaders
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - www.my192835test.com
status:
  loadBalancer: {}
